correction margin on mobile searchbar

--- a/styles.css
+++ b/styles.css
@@ -603,8 +603,10 @@ body {
     }
 
     .searchbar {
-        width: 100%;
-        padding: 0 5px;
+        width: 98%;
+        padding: 0;
+        margin-left: 5px;
+        margin-right: 5px;
     }
 
     .submit {
